# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Phil Underwood for Underwood Underground
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-ros-adapter"
description = "A library to simplify using Circuitpython style sensors with ROS (Robot Operating System)"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Underwood Underground", email = "beardydoc@gmail.com"}
]
urls = {Homepage = "https://github.com/furbrain/CircuitPython_ROS_Adapter"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "ros_adapter",
    "ROS",
    "robot",
    "sensor",
    "adapter",
    "ROS1",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["ros_adapter"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
